gpt给出的反射版本，jar中会错误